Update WhatsApp contact link in README

--- a/README
+++ b/README
@@ -11,6 +11,6 @@ FEDA SHOP
 - أدوات تنظيم المطبخ — 199 درهم
 
 رابط المتجر: https://fedashop.shop  
-اطلب عبر WhatsApp: https://wa.me/2126XXXXXXXX  (بدّل الرقم برقمك)
+اطلب عبر WhatsApp: https://wa.me/212639373662  (بدّل الرقم برقمك)
 
 حقوق النشر © 2025 FEDA SHOP
