--- a/README
+++ b/README
@@ -10,7 +10,7 @@ FEDA SHOP
 - مصباح LED قابل لإعادة الشحن — 199 درهم  
 - أدوات تنظيم المطبخ — 199 درهم
 
-رابط المتجر: https://fedashop.shop  
+رابط المتجر:https://fedashop.github.io   
 اطلب عبر WhatsApp: https://wa.me/212639373662  (بدّل الرقم برقمك)
 
 حقوق النشر © 2025 FEDA SHOP
